--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "bdd-lazy-var": "^2.6.0",
     "jest-expo": "^40.0.1",
+    "react-test-renderer": "^17.0.1",
     "typescript": "~4.0.0"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true
 }
