--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "rn-credit-card",
+  "version": "0.1.0",
+  "description": "Credit card form for react native",
+  "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -32,6 +36,5 @@
   },
   "jest": {
     "preset": "jest-expo"
-  },
-  "private": true
+  }
 }
