--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^6.14.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-card-flip": "^1.0.7",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
