--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.14.0",
