--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@expo-google-fonts/roboto-mono": "^0.1.0",
@@ -29,17 +30,29 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "bdd-lazy-var": "^2.6.0",
+    "eslint": "^7.19.0",
+    "husky": ">=4",
     "jest-expo": "^40.0.1",
+    "lint-staged": ">=10",
     "react-test-renderer": "^17.0.1",
     "typescript": "~4.0.0"
   },
   "jest": {
     "preset": "jest-expo"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
   }
 }
