Converting all into a library.

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,17 +1,16 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "rn-credit-card": ["./src/index"]
+      "rn-credit-card": ["../src/index"]
     },
+    "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
-  },
-  "exclude": ["example"],
-  "include": ["src"]
+    "strict": true,
+    "noEmit": true
+  }
 }
