--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-credit-card",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Credit card form for react native",
   "license": "MIT",
   "keywords": [
@@ -20,8 +20,8 @@
     "start": "yarn start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "build": "bob build && yarn copy-dts",
-    "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" lib/typescript",
+    "tsc": "tsc --noEmit",
+    "build": "bob build",
     "example": "yarn --cwd example",
     "bootstrap": "yarn install && yarn example"
   },
@@ -31,11 +31,11 @@
   },
   "dependencies": {
     "card-validator": "^8.1.0",
-    "react-hook-form": ">6.14.0",
     "react-native-card-flip": "^1.0.7"
   },
   "peerDependencies": {
-    "lottie-react-native": ">2.6.1"
+    "lottie-react-native": ">2.6.1",
+    "react-hook-form": ">6.13.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -45,10 +45,10 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "bdd-lazy-var": "^2.6.0",
-    "copyfiles": "^2.4.1",
     "eslint": "^7.19.0",
     "husky": ">=4",
     "lint-staged": ">=10",
+    "react-hook-form": "^6.14.0",
     "react-native-builder-bob": "^0.17.1",
     "react-test-renderer": "^17.0.1",
     "typescript": "~4.0.0"
