--- a/example/package.json
+++ b/example/package.json
@@ -23,7 +23,7 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^6.14.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "rn-credit-card": "file:.."
+    "rn-credit-card": "0.1.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
