--- a/example/package.json
+++ b/example/package.json
@@ -21,7 +21,7 @@
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-hook-form": "^6.14.0",
+    "react-hook-form": "7.3.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "rn-credit-card": "0.2.0"
   },
