--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rn-credit-card",
-  "version": "1.0.2",
+  "name": "rn-credit-card-plus",
+  "version": "1.0.3",
   "description": "Credit card form for react native",
   "license": "MIT",
   "keywords": [
